--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,12 @@
     background-repeat: no-repeat;
 }
 
-.slides-navigation .prev{
+.slides-navigation a.prev{
     left: 20px;
     background-image: url(../img/icons/prev.png);
 }
 
-.slides-navigation .next {
+.slides-navigation a.next {
     right: 20px;
     background-image: url(../img/icons/next.png);
 }
