--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@
     z-index: 3;
     background-color: rgba(0, 0, 0, 0.5);
 }
+
+.slides-navigation{
+    z-index: 6;
+}
+
 .slides-navigation .prev,
 .slides-navigation .next {
     width: 47px;
@@ -21,4 +26,30 @@
 .slides-navigation a.next {
     right: 20px;
     background-image: url(../img/icons/next.png);
+}
+
+.titleMessage {
+    position: absolute;
+    width: 100%;
+    height: 250px;
+    top: 50%;
+    z-index: 5;
+    text-align: center;
+    margin-top: -125px;
+}
+
+.titleMessage .heading p {
+    color: #fff;
+    text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+    font-weight: 100;
+    letter-spacing: 5px;
+
+}
+
+.titleMessage .heading .main {
+    font-size: 50px;
+}
+
+.titleMessage .heading .sub {
+    font-size: 25px;
 }
