--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,11 @@
     padding: 100px 0px;
 }
 
-.aboutImage{
+.aboutImage {
     max-width: 100%;
+}
+
+.skillsSection {
+    background-color: #2c3e50;
+    color: #fff
 }
