--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+body {
+    font-size: 14px;
+    color: #333;
+    background-color: #fff;
+    letter-spacing: 1px;
+}
 .overlay {
     width: 100%;
     height: 100%;
