--- a/css/style.css
+++ b/css/style.css
@@ -72,3 +72,33 @@ body {
     background-color: #2c3e50;
     color: #fff
 }
+
+.skill{
+    text-align: center;
+    margin-left: 10px
+}
+
+.chart{
+    position: relative;
+    width: 152px;
+    height: 152px;
+    display: inline-block;
+    text-align: center;
+}
+
+.chart canvas{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.chart .percent{
+    color: #000;
+    line-height: 152px;
+    display: inline-block;
+    font-size: 35px;
+}
+
+.chart .percent:after{
+    content: '%';
+}
