--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.slides-navigation{
+.slides-navigation {
     z-index: 6;
 }
 
@@ -24,7 +24,7 @@ body {
     background-repeat: no-repeat;
 }
 
-.slides-navigation a.prev{
+.slides-navigation a.prev {
     left: 20px;
     background-image: url(../img/icons/prev.png);
 }
@@ -69,16 +69,16 @@ body {
 }
 
 .skillsSection {
-    background-color: #2c3e50;
+    background-color: #16a085;
     color: #fff
 }
 
-.skill{
+.skill {
     text-align: center;
     margin-left: 10px
 }
 
-.chart{
+.chart {
     position: relative;
     width: 152px;
     height: 152px;
@@ -86,19 +86,63 @@ body {
     text-align: center;
 }
 
-.chart canvas{
+.chart canvas {
     position: absolute;
     top: 0;
     left: 0;
 }
 
-.chart .percent{
+.chart .percent {
     color: #000;
     line-height: 152px;
     display: inline-block;
     font-size: 35px;
 }
 
-.chart .percent:after{
+.chart .percent:after {
     content: '%';
+}
+
+.squareItem {
+    margin-top: 30px;
+    position: relative;
+}
+
+.squareInnerContainer {
+    position: relative;
+    padding: 50px 15px 35px;
+    text-align: center;
+    border: 2px solid #444;
+    border-top: none;
+}
+
+.squareInnerContainer:before,
+.squareInnerContainer:after {
+    content: '';
+    position:absolute;
+    top: 0px;
+    width: 30%;
+    border-bottom: 2px solid #444;
+}
+
+.squareInnerContainer:before {
+    right: 0px;
+}
+
+.squareInnerContainer:after {
+    left: 0px;
+}
+
+.squareContent h2 {
+    font-size: 56px;
+    margin-bottom: 10px;
+    font-weight: 400;
+    color: #16a085;
+
+}
+
+.squareContent h3 {
+    font-size: 13px;
+    font-weight: 600;
+    margin: 0;
 }
