--- a/css/style.css
+++ b/css/style.css
@@ -146,3 +146,14 @@ body {
     font-weight: 600;
     margin: 0;
 }
+
+.squareIcon {
+    position: absolute;
+    top: -30px;
+    left: 50%;
+    width: 40%;
+    height: 60px;
+    font-size: 45px;
+    margin-left: -45px;
+    color: #444;
+}
