--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,8 @@ body {
     max-width: 100%;
 }
 
-.skillsSection {
+.skillsSection,
+.contactSection {
     background-color: #16a085;
     color: #fff
 }
@@ -156,4 +157,19 @@ body {
     font-size: 45px;
     margin-left: -45px;
     color: #444;
+}
+
+.contactButton {
+    color: #fff;
+    padding: 15px 20px;
+    display: inline-block;
+    margin-top: 20px;
+    border: 1px solid #fff;
+    border-radius: 10px;
+}
+
+.contactButton:hover {
+    text-decoration: none;
+    color:#16a085;
+    background-color: #fff; 
 }
