--- a/css/style.css
+++ b/css/style.css
@@ -171,5 +171,23 @@ body {
 .contactButton:hover {
     text-decoration: none;
     color:#16a085;
-    background-color: #fff; 
+    background-color: #fff;
+}
+
+.filter a {
+    color: #bdc3c7;
+    border: 1px solid #bdc3c7;
+    padding: 10px 18px;
+    display:block;
+}
+
+.filter li {
+    display: inline-block;
+    padding: 5px;
+}
+
+.filter .current {
+    background-color: #16a085;
+    border-color: #16a085;
+    color: #fff;
 }
