--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,17 @@ body {
     background-color: #fff;
 }
 
+.section .heading {
+    text-align: center;
+    width: 100%;
+    padding: 40px;
+}
+
+.filter {
+    text-align: center;
+    width: 100%;
+}
+
 .filter a {
     color: #bdc3c7;
     border: 1px solid #bdc3c7;
