--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,7 @@ body {
 .filter a {
     color: #bdc3c7;
     border: 1px solid #bdc3c7;
+    border-radius: 10px;
     padding: 10px 18px;
     display:block;
 }
