--- a/css/style.css
+++ b/css/style.css
@@ -252,3 +252,23 @@ body {
     position: relative;
     display: inline-block;
 }
+
+.items .imageOverlay {
+    width: 100%;
+    height: 275px;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    left: 0px;
+    top: 14px;
+    opacity: 0;
+
+    -webkit-transition: all 0.2s linear, 1s;
+    -moz-transition: all 0.2s linear, 1s;
+    -o-transition: all 0.2s linear, 1s;
+    -ms-transition: all 0.2s linear, 1s;
+    -transition: all 0.2s linear, 1s;
+}
+
+.items .item:hover .imageOverlay{
+    opacity: 1;
+}
