--- a/css/style.css
+++ b/css/style.css
@@ -267,11 +267,11 @@ body {
 
 .items .imageOverlay {
     width: 100%;
-    height: 275px;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     position: absolute;
     left: 0px;
-    top: 14px;
+    top: 0px;
     opacity: 0;
 
     -webkit-transition: all 0.2s linear, 1s;
