--- a/css/style.css
+++ b/css/style.css
@@ -376,3 +376,19 @@ body {
     height: 100%;
     background: url(../img/preloader.gif) center center no-repeat;
 }
+
+ .owl-nav .owl-prev span {
+     position: absolute;
+     top: 30%;
+     left: 0;
+     color: #fff;
+     font-size: 35px;
+ }
+
+ .owl-nav .owl-next span {
+     position: absolute;
+     top: 30%;
+     right: 0;
+     color: #fff;
+     font-size: 35px;
+ }
